[project]
name = "Comfy_Swap_and_Scale"
description = "Do you want to easily swap width and heigth? Than this is for you. Easily swap between portrait to Landscape. Is you images model trained on 1MP pictures, then you can easily scale your input down. For best pictures width and heigth should be a factor of 32, say no more..."
version = "1.0.1"
license = { file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MijnSpam/ComfyUI_SwapAndScale"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kbrambo"
DisplayName = "Comfy swap and scale"
Icon = "https://github.com/MijnSpam/ComfyUI_SwapAndScale/blob/main/images/comfyui_swap_and_scale.png?raw=true"
